--- a/index.html
+++ b/index.html
@@ -2,92 +2,219 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
   <title>تسجيل الدخول - نظام المراد</title>
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Tahoma, Arial;
+      font-family: 'Tajawal', sans-serif;
       background: linear-gradient(135deg, #043B64, #FF6B2D);
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
       margin: 0;
+      overflow: hidden;
     }
-    .login-box {
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-      width: 320px;
+
+    /* الخلفية المتدرجة */
+    body::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: url("almurad-logo.png") center/cover no-repeat;
+      opacity: 0.08;
+      filter: blur(4px);
+      z-index: 0;
+    }
+
+    .login-container {
+      position: relative;
+      z-index: 1;
+      background: rgba(255, 255, 255, 0.12);
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
+      border-radius: 18px;
+      padding: 40px 30px;
+      width: 340px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
       text-align: center;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      animation: fadeIn 1s ease;
     }
-    h2 {
-      color: #043B64;
+
+    .logo {
+      width: 110px;
+      height: auto;
       margin-bottom: 20px;
+      filter: drop-shadow(0 3px 6px rgba(0,0,0,0.25));
+      animation: floatLogo 3s ease-in-out infinite;
     }
+
+    @keyframes floatLogo {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-6px); }
+    }
+
+    h2 {
+      color: white;
+      margin-bottom: 25px;
+      font-weight: 700;
+      font-size: 22px;
+      text-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    }
+
     input {
       width: 100%;
-      padding: 10px;
-      margin: 8px 0;
+      padding: 12px;
+      margin-bottom: 15px;
+      border: none;
       border-radius: 6px;
-      border: 1px solid #ccc;
       font-size: 14px;
+      background: rgba(255, 255, 255, 0.3);
+      color: #fff;
+      outline: none;
+      transition: all 0.3s ease;
     }
+
+    input::placeholder {
+      color: #eee;
+    }
+
+    input:focus {
+      background: rgba(255, 255, 255, 0.5);
+      box-shadow: 0 0 6px rgba(255, 107, 45, 0.6);
+    }
+
     button {
       width: 100%;
-      padding: 10px;
-      background: #FF6B2D;
+      padding: 12px;
+      background: linear-gradient(90deg, #FF6B2D, #ff844f);
       color: white;
       border: none;
       border-radius: 6px;
       font-size: 15px;
       cursor: pointer;
+      font-weight: 600;
+      transition: all 0.3s;
     }
+
     button:hover {
-      opacity: 0.9;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(255, 107, 45, 0.4);
     }
+
     .error {
-      color: red;
+      color: #ffb3b3;
       font-size: 13px;
       display: none;
-      margin-top: 5px;
+      margin-top: 10px;
+    }
+
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* 🔸 منع التكبير التلقائي بالموبايل */
+    input, select, textarea {
+      font-size: 16px !important;
     }
   </style>
 </head>
+
 <body>
 
-  <div class="login-box">
-    <h2>نظام المراد ⚙️</h2>
+  <div class="login-container">
+    <img src="almurad-logo.png" alt="شعار المراد" class="logo">
+    <h2>تسجيل الدخول إلى نظام المراد</h2>
     <input type="text" id="username" placeholder="اسم المستخدم">
     <input type="password" id="password" placeholder="كلمة المرور">
     <button id="loginBtn">تسجيل الدخول</button>
     <div class="error" id="errorMsg">❌ اسم المستخدم أو كلمة المرور غير صحيحة</div>
   </div>
 
-  <script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
+    import { getDatabase, ref, get } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyDtEJYJrmyP45qS2da8Cuc6y6Jv5VD0Uhc",
+      authDomain: "almurad-system.firebaseapp.com",
+      databaseURL: "https://almurad-system-default-rtdb.firebaseio.com/",
+      projectId: "almurad-system",
+      storageBucket: "almurad-system.appspot.com",
+      messagingSenderId: "911755824405",
+      appId: "1:911755824405:web:2bfbd18ddcf038ca48ad1c"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
     const loginBtn = document.getElementById("loginBtn");
     const errorMsg = document.getElementById("errorMsg");
 
-    // حسابات افتراضية بسيطة
-    const users = [
-      { user: "admin", pass: "1234" },
-      { user: "ayad", pass: "4321" },
-      { user: "murad", pass: "2025" }
-    ];
-
-    loginBtn.addEventListener("click", () => {
+    loginBtn.addEventListener("click", async () => {
       const username = document.getElementById("username").value.trim();
       const password = document.getElementById("password").value.trim();
 
-      const found = users.find(u => u.user === username && u.pass === password);
-      if (found) {
-        localStorage.setItem("loggedInUser", username);
-        window.location.href = "dashboard.html";
-      } else {
+      if (!username || !password) {
+        errorMsg.textContent = "⚠️ يرجى إدخال اسم المستخدم وكلمة المرور";
+        errorMsg.style.display = "block";
+        return;
+      }
+
+      try {
+        const snapshot = await get(ref(db, "users"));
+        if (!snapshot.exists()) {
+          errorMsg.textContent = "❌ لا يوجد مستخدمين في النظام";
+          errorMsg.style.display = "block";
+          return;
+        }
+
+        const users = snapshot.val();
+        let foundUser = null;
+
+        Object.keys(users).forEach(key => {
+          const userData = users[key];
+          const matchByKey = key.toLowerCase() === username.toLowerCase();
+          const matchByField = userData.username && userData.username === username;
+          if ((matchByKey || matchByField) && userData.password === password) {
+            foundUser = { username: key, ...userData };
+          }
+        });
+
+        if (foundUser) {
+          const userRef = ref(db, "users/" + foundUser.username);
+          const userSnap = await get(userRef);
+          if (userSnap.exists()) {
+            const fullData = userSnap.val();
+            if (fullData.roles && typeof fullData.roles === "string") {
+              try {
+                fullData.roles = JSON.parse(fullData.roles);
+              } catch {
+                fullData.roles = [fullData.roles];
+              }
+            }
+            foundUser.roles = fullData.roles || [];
+          }
+
+          localStorage.setItem("loggedInUser", JSON.stringify(foundUser));
+          window.location.href = "dashboard.html";
+        } else {
+          errorMsg.textContent = "❌ اسم المستخدم أو كلمة المرور غير صحيحة";
+          errorMsg.style.display = "block";
+        }
+      } catch (error) {
+        console.error(error);
+        errorMsg.textContent = "⚠️ حدث خطأ أثناء الاتصال بقاعدة البيانات";
         errorMsg.style.display = "block";
       }
     });
   </script>
+
 </body>
 </html>
