--- a/order-details.html
+++ b/order-details.html
@@ -175,6 +175,11 @@
         max-width: 100%;
       }
     }
+    /* 🔸 منع التقريب التلقائي بالموبايل */
+input, select, textarea {
+  font-size: 16px !important;
+}
+
   </style>
 </head>
 
