--- a/orders.html
+++ b/orders.html
@@ -92,6 +92,11 @@
       padding: 5px 10px;
       cursor: pointer;
     }
+    /* 🔸 منع التقريب التلقائي بالموبايل */
+input, select, textarea {
+  font-size: 16px !important;
+}
+
     button:hover { opacity: 0.9; }
   </style>
 </head>
