--- a/orders.html
+++ b/orders.html
@@ -107,6 +107,8 @@ input, select, textarea {
   <div class="top-bar">
     <button class="back-btn" id="backBtn">🔙 رجوع إلى لوحة التحكم</button>
     <button class="delete-btn" id="deleteSelected">🗑 حذف المحددة</button>
+    <button class="back-btn" id="sendToWaseet">🚚 رفع الطلبات المثبتة للوسيط</button>
+
   </div>
 
   <div class="search-bar">
@@ -143,6 +145,9 @@ input, select, textarea {
   </div>
 
   <script type="module">
+    import { waseetCities } from "./waseetCities.js";
+import { waseetRegions } from "./waseetRegions.js";
+
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
     import { getDatabase, ref, onValue, update, remove } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js";
     import { citiesData, allCities } from "./citiesData.js";
@@ -373,7 +378,153 @@ input, select, textarea {
     });
 
     document.getElementById("backBtn").addEventListener("click", () => window.location.href = "dashboard.html");
+
+
+
+// 🚚 رفع الطلبات المثبتة إلى الوسيط (نسخة محدّثة)
+// 🚚 رفع الطلبات المثبتة إلى الوسيط (نسخة مستقرة ومجربة)
+document.getElementById("sendToWaseet").addEventListener("click", async () => {
+  if (!confirm("هل تريد رفع الطلبات المثبتة إلى الوسيط؟")) return;
+
+  try {
+    console.log("⏳ تسجيل الدخول إلى الوسيط...");
+
+    // تسجيل الدخول للحصول على التوكن
+const loginResponse = await fetch("https://almurad.onrender.com/api/login", {
+  method: "POST",
+  body: new URLSearchParams({
+    username: "ramadan@almurad",
+    password: "ramadan1998@"
+  }),
+});
+
+// إرسال الطلب
+const response = await fetch("https://almurad.onrender.com/api/create-order", {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify({ token, ...payload }),
+});
+
+    const loginData = await loginResponse.json();
+    const token = loginData.data?.token;
+    if (!token) return alert("❌ فشل تسجيل الدخول إلى الوسيط.");
+
+    // اختيار الطلبات المثبتة فقط
+    const confirmedOrders = allOrders.filter(o => (o.status || "").trim() === "مثبت");
+    if (confirmedOrders.length === 0)
+      return alert("✅ لا توجد طلبات مثبتة حالياً.");
+
+    let sentCount = 0;
+    let failedCount = 0;
+
+    // 🔹 التحقق من صحة الطلب
+    function validateOrder(order, cityId, regionId) {
+      const issues = [];
+      if (!order.code) issues.push("❌ الاسم مفقود");
+      const phone = (order.phone1 || "").trim();
+      if (!phone) issues.push("❌ رقم الهاتف مفقود");
+      if (!cityId) issues.push("❌ city_id مفقود");
+      if (!regionId) issues.push("❌ region_id مفقود");
+      if (!order.price || isNaN(order.price)) issues.push("❌ السعر غير صالح");
+      if (!order.quantity || isNaN(order.quantity)) issues.push("❌ العدد غير صالح");
+      return issues;
+    }
+
+    // 🚀 رفع كل الطلبات المثبتة واحدة تلو الأخرى
+    for (const order of confirmedOrders) {
+      const cityMatch = waseetCities.find(c => c.city_name === order.city);
+      const regionMatch = waseetRegions.find(r => r.region_name === order.area);
+      const cityId = cityMatch ? cityMatch.id : "";
+      const regionId = regionMatch ? regionMatch.id : "";
+
+      // تحقق من صلاحية الطلب
+      const issues = validateOrder(order, cityId, regionId);
+      if (issues.length > 0) {
+        console.warn(`⚠️ الطلب ${order.id} يحتوي على مشاكل:`, issues.join(", "));
+        failedCount++;
+        continue;
+      }
+
+      // البيانات المطلوبة للإرسال
+      const payload = {
+        client_name: order.code || "زبون",
+        client_mobile: normalizePhone(order.phone1 || ""),
+        client_mobile2: order.phone2 ? normalizePhone(order.phone2) : "",
+        city_id: cityId,
+        region_id: regionId,
+        location: order.address || "",
+        type_name: order.productName || "منتج غير محدد",
+        items_number: order.quantity?.toString() || "1",
+        price: order.price?.toString() || "0",
+        package_size: "1",
+        merchant_notes: order.notes || "",
+        replacement: 0,
+      };
+
+      // إرسال الطلب
+      console.log("📦 إرسال الطلب:", payload);
+
+    const response = await fetch("https://almurad.onrender.com/api/create-order", {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify({ token, ...payload }),
+});
+
+
+
+      const data = await response.json();
+      console.log("📬 استجابة الوسيط:", data);
+
+      if (data.status === true && data.data?.qr_id) {
+  const qrId = data.data.qr_id;
+  const qrLink = data.data.qr_link;
+
+        // ✅ تحديث الطلب في Firebase
+        await update(ref(db, "orders/" + order.id), {
+          status: "قيد التجهيز",
+          receiptNum: qrId.toString(),
+          waseet_link: qrLink,
+        });
+
+        // إزالة الطلب من الجدول
+        const row = document.querySelector(`input[data-id='${order.id}']`)?.closest("tr");
+        if (row) row.remove();
+
+        sentCount++;
+      } else {
+        console.warn("❌ فشل رفع الطلب:", data.msg || data);
+        failedCount++;
+
+        // تلوين الصف بالأحمر
+        const row = document.querySelector(`input[data-id='${order.id}']`)?.closest("tr");
+        if (row) row.style.backgroundColor = "#ffcccc";
+      }
+    }
+
+    alert(`✅ تم رفع ${sentCount} طلب بنجاح، ❌ فشل ${failedCount} طلب.`);
+  } catch (err) {
+    console.error("❌ خطأ أثناء رفع الطلبات:", err);
+    alert("❌ حدث خطأ أثناء رفع الطلبات، تحقق من الاتصال بالسيرفر.");
+  }
+});
+
+
+// 🔢 دالة تنسيق رقم الهاتف
+function normalizePhone(phone) {
+  const arabicToEnglish = {
+    '٠': '0', '١': '1', '٢': '2', '٣': '3', '٤': '4',
+    '٥': '5', '٦': '6', '٧': '7', '٨': '8', '٩': '9'
+  };
+  let cleaned = phone.replace(/[^\d٠-٩]/g, '');
+  cleaned = cleaned.split('').map(c => arabicToEnglish[c] || c).join('');
+  if (cleaned.startsWith("0")) return "+964" + cleaned.slice(1);
+  if (cleaned.startsWith("7")) return "+964" + cleaned;
+  if (!cleaned.startsWith("+964")) return "+964" + cleaned;
+  return cleaned;
+}
+
+
   </script>
 
 </body>
-</html>
+</html> 
