--- a/almurad-system/orders.html
+++ b/almurad-system/orders.html
@@ -98,6 +98,44 @@ input, select, textarea {
 }
 
     button:hover { opacity: 0.9; }
+    /* 🔽 قائمة منسدلة للأوامر */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  min-width: 200px;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+  border-radius: 6px;
+  z-index: 9999;
+  right: 0;
+  top: 40px;
+}
+
+.dropdown-content button {
+  background: none;
+  color: #333;
+  border: none;
+  padding: 10px 15px;
+  text-align: right;
+  width: 100%;
+  font-size: 13px;
+  cursor: pointer;
+}
+
+.dropdown-content button:hover {
+  background-color: #f1f1f1;
+}
+
+/* 🔸 ظهور القائمة عند الضغط */
+.show {
+  display: block;
+}
+
   </style>
 </head>
 <body>
@@ -105,11 +143,17 @@ input, select, textarea {
   <header id="pageTitle">📦 الطلبات</header>
 
   <div class="top-bar">
-    <button class="back-btn" id="backBtn">🔙 رجوع إلى لوحة التحكم</button>
-    <button class="delete-btn" id="deleteSelected">🗑 حذف المحددة</button>
-    <button class="back-btn" id="sendToWaseet">🚚 رفع الطلبات المثبتة للوسيط</button>
-
+  <button class="back-btn" id="backBtn">🔙 رجوع إلى لوحة التحكم</button>
+  <div class="dropdown">
+    <button class="back-btn" id="commandsBtn">⚙️ أوامر الوسيط ▾</button>
+    <div class="dropdown-content" id="commandsMenu">
+      <button id="sendToWaseet">🚀 رفع الطلبات المثبتة</button>
+      <button id="updateStatuses">🔄 تحديث الحالات</button>
+    </div>
   </div>
+  <button class="delete-btn" id="deleteSelected">🗑 حذف المحددة</button>
+</div>
+
 
   <div class="search-bar">
     <input type="text" id="searchInput" placeholder="🔍 ابحث عن أي معلومة...">
@@ -389,15 +433,17 @@ document.getElementById("sendToWaseet").addEventListener("click", async () => {
   try {
     console.log("⏳ تسجيل الدخول إلى الوسيط...");
 
-    // تسجيل الدخول للحصول على التوكن
-   const formData = new FormData();
-formData.append("username", "ramadan@almurad");
-formData.append("password", "ramadan1998@");
-
-const loginResponse = await fetch("https://api.alwaseet-iq.net/v1/merchant/login", {
+  // تسجيل الدخول للحصول على التوكن
+const loginResponse = await fetch("https://almurad.onrender.com/api/login", {
   method: "POST",
-  body: formData
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify({
+    username: "ramadan@almurad",
+    password: "ramadan1998@"
+  })
 });
+
+
 
 
     const loginData = await loginResponse.json();
@@ -462,9 +508,10 @@ const loginResponse = await fetch("https://api.alwaseet-iq.net/v1/merchant/login
     const formData = new FormData();
 for (const key in payload) formData.append(key, payload[key]);
 
-const response = await fetch(`https://api.alwaseet-iq.net/v1/merchant/create-order?token=${token}`, {
+const response = await fetch("https://almurad.onrender.com/api/create-order", {
   method: "POST",
-  body: formData,
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify({ token, ...payload }),
 });
 
 
@@ -519,7 +566,112 @@ function normalizePhone(phone) {
   if (!cleaned.startsWith("+964")) return "+964" + cleaned;
   return cleaned;
 }
+// 🔽 زر القائمة المنسدلة لأوامر الوسيط
+const commandsBtn = document.getElementById("commandsBtn");
+const commandsMenu = document.getElementById("commandsMenu");
 
+commandsBtn.addEventListener("click", () => {
+  commandsMenu.classList.toggle("show");
+});
+
+// إغلاق القائمة عند النقر خارجها
+window.addEventListener("click", (e) => {
+  if (!commandsBtn.contains(e.target)) commandsMenu.classList.remove("show");
+});
+
+// 🔄 تحديث الحالات من الوسيط
+document.getElementById("updateStatuses").addEventListener("click", async () => {
+  if (!confirm("هل تريد جلب آخر الحالات من الوسيط؟")) return;
+
+  try {
+    console.log("⏳ تسجيل الدخول إلى الوسيط...");
+    const loginResponse = await fetch("https://almurad.onrender.com/api/login", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        username: "ramadan@almurad",
+        password: "ramadan1998@"
+      })
+    });
+
+    const loginData = await loginResponse.json();
+    const token = loginData.data?.token;
+    if (!token) return alert("❌ فشل تسجيل الدخول إلى الوسيط.");
+
+    // الحالات التي يمكن تحديثها فقط
+    const allowedToCheck = ["قيد التجهيز", "قيد التوصيل", "راجع"];
+
+    // المابينگ بين حالات الوسيط وحالات النظام
+    const statusMapping = {
+      "تم التسليم للزبون": "تم التسليم",
+      "تم الاستلام من قبل المندوب": "قيد التوصيل",
+      "ارجاع الى التاجر": "راجع",
+      "تم الارجاع الى التاجر": "تم استلام الراجع",
+      "في موقع فرز بغداد": "قيد التوصيل"
+    };
+
+    // تصفية الطلبات القابلة للتحديث فقط
+    const ordersToUpdate = allOrders.filter(
+      o => allowedToCheck.includes((o.status || "").trim()) && o.receiptNum
+    );
+
+    if (ordersToUpdate.length === 0)
+      return alert("✅ لا توجد طلبات تحتاج تحديث.");
+
+    let updatedCount = 0;
+
+    // تحديث الطلبات على دفعات كل 25 طلب
+    for (let i = 0; i < ordersToUpdate.length; i += 25) {
+      const batch = ordersToUpdate.slice(i, i + 25);
+      const ids = batch.map(o => o.receiptNum).join(",");
+
+      const response = await fetch(
+        `https://api.alwaseet-iq.net/v1/merchant/get-orders-by-ids-bulk?token=${token}`,
+        {
+          method: "POST",
+          headers: { "Content-Type": "application/x-www-form-urlencoded" },
+          body: `ids=${ids}`
+        }
+      );
+
+      const data = await response.json();
+
+      if (data.status && data.data) {
+        for (const orderData of data.data) {
+          const apiStatus = (orderData.status || "").trim();
+          const mappedStatus = statusMapping[apiStatus] || null;
+          if (!mappedStatus) continue;
+
+          const targetOrder = allOrders.find(
+            o => (o.receiptNum || "").toString() === orderData.id.toString()
+          );
+
+          if (targetOrder) {
+            await update(ref(db, `orders/${targetOrder.id}`), {
+              status: mappedStatus
+            });
+            updatedCount++;
+
+            // إذا الحالة "في موقع فرز بغداد" أضف ملاحظة
+            if (apiStatus === "في موقع فرز بغداد") {
+              await update(ref(db, `orders/${targetOrder.id}`), {
+                notes:
+                  (targetOrder.notes || "") +
+                  (targetOrder.notes ? " | " : "") +
+                  "تحولت من موقع فرز"
+              });
+            }
+          }
+        }
+      }
+    }
+
+    alert(`✅ تم تحديث ${updatedCount} حالة بنجاح.`);
+  } catch (err) {
+    console.error("❌ خطأ أثناء تحديث الحالات:", err);
+    alert("❌ حدث خطأ أثناء تحديث الحالات، تحقق من الاتصال بالسيرفر.");
+  }
+});
 
   </script>
 
