--- a/almurad-system/orders.html
+++ b/almurad-system/orders.html
@@ -427,130 +427,129 @@ import { waseetRegions } from "./waseetRegions.js";
 
 // 🚚 رفع الطلبات المثبتة إلى الوسيط (نسخة محدّثة)
 // 🚚 رفع الطلبات المثبتة إلى الوسيط (نسخة مستقرة ومجربة)
+// 🚀 رفع الطلبات المثبتة واحدة تلو الأخرى (نسخة أصلية قديمة)
 document.getElementById("sendToWaseet").addEventListener("click", async () => {
-  if (!confirm("هل تريد رفع الطلبات المثبتة إلى الوسيط؟")) return;
+  // 🟩 شريط الحالة بالأعلى
+  let statusBar = document.getElementById("statusBar");
+  if (!statusBar) {
+    statusBar = document.createElement("div");
+    statusBar.id = "statusBar";
+    Object.assign(statusBar.style, {
+      position: "fixed",
+      top: "0",
+      right: "0",
+      left: "0",
+      padding: "12px",
+      textAlign: "center",
+      backgroundColor: "#043B64",
+      color: "white",
+      fontSize: "15px",
+      fontWeight: "bold",
+      zIndex: "999999",
+      transition: "0.4s ease"
+    });
+    document.body.appendChild(statusBar);
+  }
+  const showMsg = (text, color = "#043B64") => {
+    statusBar.textContent = text;
+    statusBar.style.backgroundColor = color;
+    statusBar.style.display = "block";
+  };
 
   try {
-    console.log("⏳ تسجيل الدخول إلى الوسيط...");
+    showMsg("⏳ تسجيل الدخول إلى الوسيط...");
 
-  // تسجيل الدخول للحصول على التوكن
-const loginResponse = await fetch("https://almurad.onrender.com/api/login", {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify({
-    username: "ramadan@almurad",
-    password: "ramadan1998@"
-  })
-});
-
-
-
+    // تسجيل الدخول للحصول على التوكن
+    const loginResponse = await fetch("https://almurad.onrender.com/api/login", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        username: "ramadan@almurad",
+        password: "ramadan1998@"
+      })
+    });
 
     const loginData = await loginResponse.json();
     const token = loginData.data?.token;
-    if (!token) return alert("❌ فشل تسجيل الدخول إلى الوسيط.");
+    if (!token) {
+      showMsg("❌ فشل تسجيل الدخول إلى الوسيط", "#b30000");
+      return;
+    }
 
     // اختيار الطلبات المثبتة فقط
     const confirmedOrders = allOrders.filter(o => (o.status || "").trim() === "مثبت");
-    if (confirmedOrders.length === 0)
-      return alert("✅ لا توجد طلبات مثبتة حالياً.");
-
-    let sentCount = 0;
-    let failedCount = 0;
-
-    // 🔹 التحقق من صحة الطلب
-    function validateOrder(order, cityId, regionId) {
-      const issues = [];
-      if (!order.code) issues.push("❌ الاسم مفقود");
-      const phone = (order.phone1 || "").trim();
-      if (!phone) issues.push("❌ رقم الهاتف مفقود");
-      if (!cityId) issues.push("❌ city_id مفقود");
-      if (!regionId) issues.push("❌ region_id مفقود");
-      if (!order.price || isNaN(order.price)) issues.push("❌ السعر غير صالح");
-      if (!order.quantity || isNaN(order.quantity)) issues.push("❌ العدد غير صالح");
-      return issues;
+    if (confirmedOrders.length === 0) {
+      showMsg("✅ لا توجد طلبات مثبتة حالياً.", "#28a745");
+      setTimeout(() => (statusBar.style.display = "none"), 2500);
+      return;
     }
 
-    // 🚀 رفع كل الطلبات المثبتة واحدة تلو الأخرى
+    let sentCount = 0, failedCount = 0;
+    showMsg(`🚀 جاري رفع ${confirmedOrders.length} طلب...`);
+
+    // رفع الطلبات واحداً تلو الآخر
     for (const order of confirmedOrders) {
-      const cityMatch = waseetCities.find(c => c.city_name === order.city);
-      const regionMatch = waseetRegions.find(r => r.region_name === order.area);
-      const cityId = cityMatch ? cityMatch.id : "";
-      const regionId = regionMatch ? regionMatch.id : "";
+      try {
+        const cityMatch = waseetCities.find(c => c.city_name === order.city);
+        const regionMatch = waseetRegions.find(r => r.region_name === order.area);
+        const cityId = cityMatch ? cityMatch.id : "";
+        const regionId = regionMatch ? regionMatch.id : "";
 
-      // تحقق من صلاحية الطلب
-      const issues = validateOrder(order, cityId, regionId);
-      if (issues.length > 0) {
-        console.warn(`⚠️ الطلب ${order.id} يحتوي على مشاكل:`, issues.join(", "));
-        failedCount++;
-        continue;
-      }
+        if (!cityId || !regionId) {
+          failedCount++;
+          continue;
+        }
 
-      // البيانات المطلوبة للإرسال
-      const payload = {
-        client_name: order.code || "زبون",
-        client_mobile: normalizePhone(order.phone1 || ""),
-        client_mobile2: order.phone2 ? normalizePhone(order.phone2) : "",
-        city_id: cityId,
-        region_id: regionId,
-        location: order.address || "",
-        type_name: order.productName || "منتج غير محدد",
-        items_number: order.quantity?.toString() || "1",
-        price: order.price?.toString() || "0",
-        package_size: "1",
-        merchant_notes: order.notes || "",
-        replacement: 0,
-      };
+        const payload = {
+          token,
+          client_name: order.code || "زبون",
+          client_mobile: normalizePhone(order.phone1 || ""),
+          client_mobile2: order.phone2 ? normalizePhone(order.phone2) : "",
+          city_id: cityId,
+          region_id: regionId,
+          location: order.address || "",
+          type_name: order.productName || "منتج غير محدد",
+          items_number: order.quantity?.toString() || "1",
+          price: order.price?.toString() || "0",
+          package_size: "1",
+          merchant_notes: order.notes || "",
+          replacement: 0,
+        };
 
-      // إرسال الطلب
-      console.log("📦 إرسال الطلب:", payload);
-
-    const formData = new FormData();
-for (const key in payload) formData.append(key, payload[key]);
-
-const response = await fetch("https://almurad.onrender.com/api/create-order", {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify({ token, ...payload }),
-});
-
-
-
-      const data = await response.json();
-      console.log("📬 استجابة الوسيط:", data);
-
-      if (data.status === true && data.data?.qr_id) {
-  const qrId = data.data.qr_id;
-  const qrLink = data.data.qr_link;
-
-        // ✅ تحديث الطلب في Firebase
-        await update(ref(db, "orders/" + order.id), {
-          status: "قيد التجهيز",
-          receiptNum: qrId.toString(),
-          waseet_link: qrLink,
+        // إرسال الطلب إلى السيرفر الوسيط (عن طريق سيرفرك الخاص)
+        const response = await fetch("https://almurad.onrender.com/api/create-order", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(payload),
         });
 
-        // إزالة الطلب من الجدول
-        const row = document.querySelector(`input[data-id='${order.id}']`)?.closest("tr");
-        if (row) row.remove();
+        const data = await response.json();
+        console.log("📬 استجابة الوسيط:", data);
 
-        sentCount++;
-      } else {
-        console.warn("❌ فشل رفع الطلب:", data.msg || data);
+        if (data.status === true && data.data?.qr_id) {
+          await update(ref(db, `orders/${order.id}`), {
+            status: "قيد التجهيز",
+            receiptNum: data.data.qr_id.toString(),
+            waseet_link: data.data.qr_link,
+          });
+          sentCount++;
+        } else {
+          failedCount++;
+        }
+      } catch (err) {
         failedCount++;
-
-        // تلوين الصف بالأحمر
-        const row = document.querySelector(`input[data-id='${order.id}']`)?.closest("tr");
-        if (row) row.style.backgroundColor = "#ffcccc";
+        console.error("❌ خطأ أثناء رفع الطلب:", err);
       }
     }
 
-    alert(`✅ تم رفع ${sentCount} طلب بنجاح، ❌ فشل ${failedCount} طلب.`);
+    showMsg(`✅ تم رفع ${sentCount} طلب بنجاح، ❌ فشل ${failedCount}.`, "#28a745");
+    setTimeout(() => (statusBar.style.display = "none"), 4000);
   } catch (err) {
-    console.error("❌ خطأ أثناء رفع الطلبات:", err);
-    alert("❌ حدث خطأ أثناء رفع الطلبات، تحقق من الاتصال بالسيرفر.");
+    console.error("❌ خطأ عام أثناء رفع الطلبات:", err);
+    showMsg("❌ حدث خطأ أثناء رفع الطلبات.", "#b30000");
   }
 });
+
 
 
 // 🔢 دالة تنسيق رقم الهاتف
@@ -580,11 +579,40 @@ window.addEventListener("click", (e) => {
 });
 
 // 🔄 تحديث الحالات من الوسيط
+// 🔄 تحديث الحالات من الوسيط (نسخة محسّنة)
+// 🔄 تحديث الحالات من الوسيط (Bulk - تحديث فوري دفعة واحدة)
 document.getElementById("updateStatuses").addEventListener("click", async () => {
-  if (!confirm("هل تريد جلب آخر الحالات من الوسيط؟")) return;
+  // 🟩 شريط الإشعارات
+  let statusBar = document.getElementById("statusBar");
+  if (!statusBar) {
+    statusBar = document.createElement("div");
+    statusBar.id = "statusBar";
+    Object.assign(statusBar.style, {
+      position: "fixed",
+      top: "0",
+      right: "0",
+      left: "0",
+      padding: "12px",
+      textAlign: "center",
+      backgroundColor: "#043B64",
+      color: "white",
+      fontSize: "15px", 
+      fontWeight: "bold",
+      zIndex: "999999",
+      transition: "0.4s ease"
+    });
+    document.body.appendChild(statusBar);
+  }
+  function showMsg(text, color = "#043B64") {
+    statusBar.textContent = text;
+    statusBar.style.backgroundColor = color;
+    statusBar.style.display = "block";
+  }
 
   try {
-    console.log("⏳ تسجيل الدخول إلى الوسيط...");
+    showMsg("⏳ جاري تسجيل الدخول إلى الوسيط...");
+
+    // 🔐 تسجيل الدخول للحصول على التوكن
     const loginResponse = await fetch("https://almurad.onrender.com/api/login", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
@@ -596,12 +624,15 @@ document.getElementById("updateStatuses").addEventListener("click", async () => 
 
     const loginData = await loginResponse.json();
     const token = loginData.data?.token;
-    if (!token) return alert("❌ فشل تسجيل الدخول إلى الوسيط.");
+    if (!token) {
+      showMsg("❌ فشل تسجيل الدخول إلى الوسيط", "#b30000");
+      return;
+    }
 
-    // الحالات التي يمكن تحديثها فقط
+    // 🟠 الحالات التي يمكن تحديثها فقط
     const allowedToCheck = ["قيد التجهيز", "قيد التوصيل", "راجع"];
 
-    // المابينگ بين حالات الوسيط وحالات النظام
+    // 🧩 المابينگ بين حالات الوسيط وحالات النظام
     const statusMapping = {
       "تم التسليم للزبون": "تم التسليم",
       "تم الاستلام من قبل المندوب": "قيد التوصيل",
@@ -610,66 +641,69 @@ document.getElementById("updateStatuses").addEventListener("click", async () => 
       "في موقع فرز بغداد": "قيد التوصيل"
     };
 
-    // تصفية الطلبات القابلة للتحديث فقط
+    // 🔍 تصفية الطلبات التي تحتاج تحديث فقط
     const ordersToUpdate = allOrders.filter(
       o => allowedToCheck.includes((o.status || "").trim()) && o.receiptNum
     );
 
-    if (ordersToUpdate.length === 0)
-      return alert("✅ لا توجد طلبات تحتاج تحديث.");
+    if (ordersToUpdate.length === 0) {
+      showMsg("✅ لا توجد طلبات تحتاج تحديث.", "#28a745");
+      setTimeout(() => (statusBar.style.display = "none"), 2500);
+      return;
+    }
+
+    showMsg(`🔄 جاري تحديث ${ordersToUpdate.length} طلب دفعة واحدة...`);
+
+    // 🧾 تجميع كل أرقام الوصول دفعة واحدة
+    const allIds = ordersToUpdate.map(o => o.receiptNum).join(",");
+
+    // 📡 إرسال دفعة واحدة للسيرفر
+    const response = await fetch("https://almurad.onrender.com/api/get-orders-status", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ token, ids: allIds })
+    });
+
+    const data = await response.json();
+
+    if (!data.status || !data.data) {
+      showMsg("❌ فشل جلب الحالات من الوسيط.", "#b30000");
+      return;
+    }
 
     let updatedCount = 0;
 
-    // تحديث الطلبات على دفعات كل 25 طلب
-    for (let i = 0; i < ordersToUpdate.length; i += 25) {
-      const batch = ordersToUpdate.slice(i, i + 25);
-      const ids = batch.map(o => o.receiptNum).join(",");
+    // 🔁 تحديث الطلبات كلها دفعة واحدة بالـ Firebase
+    for (const orderData of data.data) {
+      const apiStatus = (orderData.status || "").trim();
+      const mappedStatus = statusMapping[apiStatus] || null;
+      if (!mappedStatus) continue;
 
-      const response = await fetch(
-        `https://api.alwaseet-iq.net/v1/merchant/get-orders-by-ids-bulk?token=${token}`,
-        {
-          method: "POST",
-          headers: { "Content-Type": "application/x-www-form-urlencoded" },
-          body: `ids=${ids}`
-        }
+      const targetOrder = allOrders.find(
+        o => (o.receiptNum || "").toString() === orderData.id.toString()
       );
+      if (targetOrder) {
+        await update(ref(db, `orders/${targetOrder.id}`), {
+          status: mappedStatus
+        });
+        updatedCount++;
 
-      const data = await response.json();
-
-      if (data.status && data.data) {
-        for (const orderData of data.data) {
-          const apiStatus = (orderData.status || "").trim();
-          const mappedStatus = statusMapping[apiStatus] || null;
-          if (!mappedStatus) continue;
-
-          const targetOrder = allOrders.find(
-            o => (o.receiptNum || "").toString() === orderData.id.toString()
-          );
-
-          if (targetOrder) {
-            await update(ref(db, `orders/${targetOrder.id}`), {
-              status: mappedStatus
-            });
-            updatedCount++;
-
-            // إذا الحالة "في موقع فرز بغداد" أضف ملاحظة
-            if (apiStatus === "في موقع فرز بغداد") {
-              await update(ref(db, `orders/${targetOrder.id}`), {
-                notes:
-                  (targetOrder.notes || "") +
-                  (targetOrder.notes ? " | " : "") +
-                  "تحولت من موقع فرز"
-              });
-            }
-          }
+        if (apiStatus === "في موقع فرز بغداد") {
+          await update(ref(db, `orders/${targetOrder.id}`), {
+            notes:
+              (targetOrder.notes || "") +
+              (targetOrder.notes ? " | " : "") +
+              "تحولت من موقع فرز"
+          });
         }
       }
     }
 
-    alert(`✅ تم تحديث ${updatedCount} حالة بنجاح.`);
+    showMsg(`✅ تم تحديث ${updatedCount} طلب بنجاح.`, "#28a745");
+    setTimeout(() => (statusBar.style.display = "none"), 3000);
   } catch (err) {
     console.error("❌ خطأ أثناء تحديث الحالات:", err);
-    alert("❌ حدث خطأ أثناء تحديث الحالات، تحقق من الاتصال بالسيرفر.");
+    showMsg("❌ حدث خطأ أثناء تحديث الحالات.", "#b30000");
   }
 });
 
