تحديث تصميم الموقع وإضافة manifest

--- a/almurad-system/index.html
+++ b/almurad-system/index.html
@@ -5,7 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <title>تسجيل الدخول - نظام المراد</title>
+
+  <!-- ✅ أيقونة المتصفح والشاشة الرئيسية -->
+  <link rel="icon" type="image/png" href="almurad-logo.png">
+  <link rel="shortcut icon" href="almurad-logo.png">
+  <link rel="apple-touch-icon" href="almurad-logo.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="نظام المراد">
+  <meta name="theme-color" content="#043B64">
+  <link rel="manifest" href="manifest.json">
+
+  <!-- الخطوط -->
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
+
   <style>
     body {
       font-family: 'Tajawal', sans-serif;
@@ -113,7 +126,6 @@
       margin-top: 10px;
     }
 
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(30px); }
       to { opacity: 1; transform: translateY(0); }
@@ -127,7 +139,6 @@
 </head>
 
 <body>
-
   <div class="login-container">
     <img src="almurad-logo.png" alt="شعار المراد" class="logo">
     <h2>تسجيل الدخول إلى نظام المراد</h2>
@@ -215,6 +226,5 @@
       }
     });
   </script>
-
 </body>
 </html>
