--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <title>تسجيل الدخول - نظام المراد</title>
+
+  <!-- ✅ روابط الشعار والمانيفست -->
+  <link rel="icon" type="image/png" href="almurad-system/almurad-logo.png">
+  <link rel="shortcut icon" href="almurad-system/almurad-logo.png">
+  <link rel="apple-touch-icon" href="almurad-system/almurad-logo.png">
+  <link rel="manifest" href="almurad-system/manifest.json">
+
+  <!-- الخط -->
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
+
     body {
       font-family: 'Tajawal', sans-serif;
       background: linear-gradient(135deg, #043B64, #FF6B2D);
