--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
 
   <title>تسجيل الدخول - نظام المراد</title>
 
-  <!-- ✅ روابط الشعار والمانيفست -->
-  <link rel="icon" type="image/png" href="almurad-system/almurad-logo.png">
-  <link rel="shortcut icon" href="almurad-system/almurad-logo.png">
-  <link rel="apple-touch-icon" href="almurad-system/almurad-logo.png">
-  <link rel="manifest" href="almurad-system/manifest.json">
+<!-- 👇 تعريف اسم التطبيق للشاشة الرئيسية -->
+<meta name="apple-mobile-web-app-title" content="نظام المراد">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="theme-color" content="#043B64">
+
+<!-- ✅ روابط الشعار والمانيفست -->
+<link rel="icon" type="image/png" href="almurad-system/almurad-logo.png">
+<link rel="shortcut icon" href="almurad-system/almurad-logo.png">
+<link rel="apple-touch-icon" href="almurad-system/almurad-logo.png">
+<link rel="manifest" href="almurad-system/manifest.json">
+
 
   <!-- الخط -->
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
